src/sunlinsol/spbcgs/fmod/fsunlinsol_spbcgs_mod.f90

! This file was automatically generated by SWIG (http://www.swig.org).
! Version 4.0.0
!
! Do not make changes to this file unless you know what you are doing--modify
! the SWIG interface file instead.

! ---------------------------------------------------------------
! Programmer(s): Auto-generated by swig.
! ---------------------------------------------------------------
! SUNDIALS Copyright Start
! Copyright (c) 2002-2019, Lawrence Livermore National Security
! and Southern Methodist University.
! All rights reserved.
!
! See the top-level LICENSE and NOTICE files for details.
!
! SPDX-License-Identifier: BSD-3-Clause
! SUNDIALS Copyright End
! ---------------------------------------------------------------

module fsunlinsol_spbcgs_mod
 use, intrinsic :: ISO_C_BINDING
 use fsunlinsol_mod
 use fsundials_types_mod
 use fnvector_mod
 use fsundials_types_mod
 implicit none
 private

 ! DECLARATION CONSTRUCTS
 integer(C_INT), parameter, public :: SUNSPBCGS_MAXL_DEFAULT = 5_C_INT
 public :: FSUNLinSol_SPBCGS
 public :: FSUNLinSol_SPBCGSSetPrecType
 public :: FSUNLinSol_SPBCGSSetMaxl
 public :: FSUNSPBCGS
 public :: FSUNSPBCGSSetPrecType
 public :: FSUNSPBCGSSetMaxl
 public :: FSUNLinSolGetType_SPBCGS
 public :: FSUNLinSolInitialize_SPBCGS
 public :: FSUNLinSolSetATimes_SPBCGS
 public :: FSUNLinSolSetPreconditioner_SPBCGS
 public :: FSUNLinSolSetScalingVectors_SPBCGS
 public :: FSUNLinSolSetup_SPBCGS
 public :: FSUNLinSolSolve_SPBCGS
 public :: FSUNLinSolNumIters_SPBCGS
 public :: FSUNLinSolResNorm_SPBCGS
 public :: FSUNLinSolResid_SPBCGS
 public :: FSUNLinSolLastFlag_SPBCGS
 public :: FSUNLinSolSpace_SPBCGS
 public :: FSUNLinSolFree_SPBCGS

! WRAPPER DECLARATIONS
interface
function FSUNLinSol_SPBCGS(y, pretype, maxl) &
bind(C, name="SUNLinSol_SPBCGS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: y
integer(C_INT), value :: pretype
integer(C_INT), value :: maxl
type(C_PTR) :: fresult
end function

function FSUNLinSol_SPBCGSSetPrecType(s, pretype) &
bind(C, name="SUNLinSol_SPBCGSSetPrecType") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT), value :: pretype
integer(C_INT) :: fresult
end function

function FSUNLinSol_SPBCGSSetMaxl(s, maxl) &
bind(C, name="SUNLinSol_SPBCGSSetMaxl") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT), value :: maxl
integer(C_INT) :: fresult
end function

function FSUNSPBCGS(y, pretype, maxl) &
bind(C, name="SUNSPBCGS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: y
integer(C_INT), value :: pretype
integer(C_INT), value :: maxl
type(C_PTR) :: fresult
end function

function FSUNSPBCGSSetPrecType(s, pretype) &
bind(C, name="SUNSPBCGSSetPrecType") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT), value :: pretype
integer(C_INT) :: fresult
end function

function FSUNSPBCGSSetMaxl(s, maxl) &
bind(C, name="SUNSPBCGSSetMaxl") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT), value :: maxl
integer(C_INT) :: fresult
end function

function FSUNLinSolGetType_SPBCGS(s) &
bind(C, name="SUNLinSolGetType_SPBCGS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT) :: fresult
end function

function FSUNLinSolInitialize_SPBCGS(s) &
bind(C, name="SUNLinSolInitialize_SPBCGS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT) :: fresult
end function

function FSUNLinSolSetATimes_SPBCGS(s, a_data, atimes) &
bind(C, name="SUNLinSolSetATimes_SPBCGS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
type(C_PTR), value :: a_data
type(C_FUNPTR), value :: atimes
integer(C_INT) :: fresult
end function

function FSUNLinSolSetPreconditioner_SPBCGS(s, p_data, pset, psol) &
bind(C, name="SUNLinSolSetPreconditioner_SPBCGS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
type(C_PTR), value :: p_data
type(C_FUNPTR), value :: pset
type(C_FUNPTR), value :: psol
integer(C_INT) :: fresult
end function

function FSUNLinSolSetScalingVectors_SPBCGS(s, s1, s2) &
bind(C, name="SUNLinSolSetScalingVectors_SPBCGS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
type(C_PTR), value :: s1
type(C_PTR), value :: s2
integer(C_INT) :: fresult
end function

function FSUNLinSolSetup_SPBCGS(s, a) &
bind(C, name="SUNLinSolSetup_SPBCGS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
type(C_PTR), value :: a
integer(C_INT) :: fresult
end function

function FSUNLinSolSolve_SPBCGS(s, a, x, b, tol) &
bind(C, name="SUNLinSolSolve_SPBCGS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
type(C_PTR), value :: a
type(C_PTR), value :: x
type(C_PTR), value :: b
real(C_DOUBLE), value :: tol
integer(C_INT) :: fresult
end function

function FSUNLinSolNumIters_SPBCGS(s) &
bind(C, name="SUNLinSolNumIters_SPBCGS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT) :: fresult
end function

function FSUNLinSolResNorm_SPBCGS(s) &
bind(C, name="SUNLinSolResNorm_SPBCGS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
real(C_DOUBLE) :: fresult
end function

function FSUNLinSolResid_SPBCGS(s) &
bind(C, name="SUNLinSolResid_SPBCGS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
type(C_PTR) :: fresult
end function

function FSUNLinSolLastFlag_SPBCGS(s) &
bind(C, name="SUNLinSolLastFlag_SPBCGS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_LONG) :: fresult
end function

function FSUNLinSolSpace_SPBCGS(s, lenrwls, leniwls) &
bind(C, name="SUNLinSolSpace_SPBCGS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_LONG) :: lenrwls
integer(C_LONG) :: leniwls
integer(C_INT) :: fresult
end function

function FSUNLinSolFree_SPBCGS(s) &
bind(C, name="SUNLinSolFree_SPBCGS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT) :: fresult
end function

end interface


end module
